[package]
name = "fcm-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = "0.4"
http = "0.2"
jsonwebtoken = { version = "8.0", feature = ["use_pem"] }
parking_lot = "0.12"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.16", features = ["macros"] }
